# scifem

./: .clang-format  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _config.yml  _toc.yml  build-requirements.txt  point_source_nedelec.py  pyproject.toml
.github/workflows/: build_docs.yml  deploy_docs.yml  pypi.yml  tests.yml
docs/: api.rst  refs.bib
examples/: blocked_solver.py  evaluate_function.py  mark_entities.py  point_source.py  real_function_space.py  real_function_space_nonlinear.ipynb  real_function_space_nonlinear.py  real_function_space_nonlinear_verif_2.ipynb  transfer_tags_to_submesh.py  xdmf_point_cloud.py
src/: scifem.cpp
src/scifem/: __init__.py  assembly.py  bcs.py  biomedical.py  compat.py  eval.py  geometry.py  interpolation.py  mesh.py  petsc.py  point_source.py  refinement.py  solvers.py  spaces.py  utils.py  xdmf.py
tests/: test_assembly.py  test_batch_assembly.py  test_batch_by_submesh.py  test_bcs.py  test_blocked_newton_solver.py  test_eval.py  test_geometry.py  test_interpolation.py  test_material_space.py  test_mesh.py  test_mesh_movement.py  test_mixed_space.py  test_point_source.py  test_read_mri_data.py  test_real_functionspace.py  test_refinement.py  test_vertex_to_dofmap.py  test_xdmf.py
